# pastebinrun

./: .dockerignore  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  diesel.toml  docker-compose.yml  languages.json  package-lock.json  package.json  shell.nix  tsconfig.json  vite.config.ts  webpack.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml
.reuse/: dep5
__tests__/: .StandardInput.test.tsx.kate-swp  StandardInput.test.tsx  setup.js
buildSrc/: build.rs
js/: cache.js  codemirror-editor.js  config.js  create-editor.tsx  create-options-link.ts  editor-types.js  editor-types.ts  editor.js  get-language.js  highlight-all.ts  index.js  index.ts  options.ts
js/editor/: codemirror.js  textarea.js
js/models/: CodeView.ts  Wrapper.ts  WrapperOptions.ts
js/views/: App.tsx  Editor.tsx  LanguageSelector.tsx  Options.tsx  OptionsEditorType.tsx  Output.tsx  OutputBox.tsx  StandardInput.tsx  WrapperBar.tsx  WrapperBarButton.tsx  config-link.js  config-link.ts
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2019-02-20-235122_create_pastes/: down.sql  up.sql
migrations/2019-03-02-173641_add-html-language/: down.sql  up.sql
migrations/2019-03-02-174026_fix-html-mode-name/: down.sql  up.sql
migrations/2019-03-03-095403_add-deletion-date/: down.sql  up.sql
migrations/2019-03-04-074159_add-pgsql/: down.sql  up.sql
migrations/2019-03-06-150750_add-php/: down.sql  up.sql
migrations/2019-03-07-075501_add-is-markdown-flag/: up.sql
migrations/2019-03-08-081008_remove-revision-system/: down.sql  up.sql
migrations/2019-03-14-144201_about-page/: down.sql  up.sql
migrations/2019-03-15-065751_nofollow-column/: up.sql
migrations/2019-04-08-075940_remove-about-page/: down.sql
migrations/2019-08-08-143146_remove-no-follow/: down.sql  up.sql
migrations/2019-08-10-124655_allow-executing-python3-code/: down.sql  up.sql
migrations/2019-08-10-154536_add-shell-script/: down.sql  up.sql
migrations/2019-08-10-160609_execute-sqlite/: down.sql  up.sql
migrations/2019-08-11-085555_format-python3/: down.sql  up.sql
migrations/2019-08-11-104858_execute-rust/: down.sql  up.sql
migrations/2019-08-11-113651_add-perl6/: down.sql  up.sql
migrations/2019-08-14-093123_format-python3-with-black/: down.sql  up.sql
migrations/2019-08-14-100939_add-compiler-options-parameter/: down.sql  up.sql
migrations/2019-08-15-123406_identifiers/: down.sql  up.sql
migrations/2019-09-16-172252_implementations/: down.sql  up.sql
migrations/2019-09-19-100046_c/: down.sql  up.sql
migrations/2019-09-19-185247_users/: up.sql
migrations/2019-09-19-185626_sessions/: up.sql
migrations/2019-09-21-152245_remove-shared-wrappers/: down.sql  up.sql
migrations/2019-09-23-120726_delete-at-partial-index/: down.sql  up.sql
migrations/2019-10-12-170323_perl/: down.sql  up.sql
src/: blocking.rs  build.rs  environment.rs  main.rs  migration.rs  models.rs  routes.rs  schema.rs  schema.rs.license
static/: codemirror.js  index.js  style-v2.css  style.css
templates/: 404.html  base.html  base.html.tera  buttons.rs.html  config.html.tera  config.rs.html  display-paste.html.tera  display_paste.rs.html  footer.rs.html  header.rs.html  index.html  index.html.tera  index.rs.html  language_selection.rs.html  language_selector.html  not_found.rs.html  paste.html  register.rs.html  viewpaste.html
(+87 files in other folders)
