[package]
name = "pastebinrun"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2021"
license = "AGPL-3.0-or-later"
build = "buildSrc/build.rs"

[dependencies]
ammonia = "3.2.1"
chrono = "0.4.22"
diesel = { version = "1.4.6", features = ["chrono"] }
diesel_migrations = "1.4.0"
itertools = "0.10.1"
log = "0.4.14"
once_cell = "1.14.0"
prometheus = { version = "0.13.2", features = ["process"], default-features = false }
pulldown-cmark = { version = "0.9.2", default-features = false }
rand = "0.8.3"
reqwest = { version = "0.11.11", features = ["json"] }
rocket = { version = "=0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "=0.1.0-rc.2", features = ["tera"] }
rocket_sync_db_pools = { version = "=0.1.0-rc.2", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_with = "2.0.1"
time-parse = "0.2.0"

[build-dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[features]
database_tests = []
sandbox_tests = []
