[package]
name = "pastebinrun"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2021"
license = "AGPL-3.0-or-later"
build = "buildSrc/build.rs"

[dependencies]
ammonia = "3.3.0"
chrono = { version = "0.4.24", default-features = false }
diesel = { version = "2.0.3", features = ["chrono"] }
diesel_migrations = "2.0.0"
itertools = "0.10.5"
log = "0.4.14"
once_cell = "1.17.1"
prometheus = { version = "0.13.3", features = ["process"], default-features = false }
pulldown-cmark = { version = "0.9.2", default-features = false }
rand = "0.8.3"
reqwest = { version = "0.11.16", features = ["json"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
rocket_sync_db_pools = { version = "=0.1.0-rc.3", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"
time-parse = "0.2.0"

[build-dependencies]
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"

[features]
database_tests = []
sandbox_tests = []
