[package]
name = "pastebinrun"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2021"
license = "AGPL-3.0-or-later"
build = "buildSrc/build.rs"

[dependencies]
ammonia = "3.3.0"
chrono = { version = "0.4.28", default-features = false }
diesel = { version = "2.0.4", features = ["chrono"] }
diesel_migrations = "2.1.0"
itertools = "0.11.0"
log = "0.4.20"
once_cell = "1.18.0"
prometheus = { version = "0.13.3", features = ["process"], default-features = false }
pulldown-cmark = { version = "0.9.3", default-features = false }
rand = "0.8.3"
reqwest = { version = "0.11.20", features = ["json"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
rocket_sync_db_pools = { version = "=0.1.0-rc.3", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.105"
serde_with = "3.3.0"
time-parse = "0.2.0"

[build-dependencies]
serde = { version = "=1.0.171", features = ["derive"] }
serde_json = "1.0.105"

[features]
database_tests = []
sandbox_tests = []
